# SSM-Transcriber

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/commands/: new-pr.md  phase-check.md  review.md  ship.md  transcribe-local.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: slice.yml
.github/workflows/: ci.yml
docs/: PLAN.md
docs/ai/: README.md
docs/ai/runbooks/: aws-teardown.md  drive-transcribe-upload.md  gstack-superpowers-workflow.md  new-pr.md  phase-check.md  review.md  ship.md  tracking.md  transcribe-local.md
docs/ai/specs/: README.md
docs/learn/: README.md  glossary.md  interview-prep.md  journey.md  python-notes.md  vibe-coding-notes.md
docs/learn/prs/: README.md  pr-001-phase-0-skeleton.md  pr-002-phase-0-rename.md  pr-003-phase-1-foundations.md  pr-004-docs-learn-teaching-register.md  pr-005-ai-operator-guide-workflow-commands.md  pr-006-roadmap-naming-and-hosted-provider-strategy.md  pr-007-backfill-pr-6-merge-date.md  pr-008-adopt-sdd-constitution.md  pr-009-mission-provider-agnostic-framing.md  pr-010-assemblyai-mvp-slice-1-spec.md  pr-011-plan-vad-and-transcription-boundary.md  pr-012-assemblyai-mvp-slice-1-impl.md  pr-013-prevent-vendor-api-shape-regressions.md  pr-014-housekeeping-merge-dates-roadmap-pr7-explainer.md  pr-015-drive-source-passthrough-spec.md  pr-017-drive-source-passthrough-impl.md  pr-018-assemblyai-rate-constant-fix.md  pr-019-drive-upload.md  pr-030-youtube-captions-source-spec.md  pr-031-youtube-captions-source-impl.md  pr-034-youtube-audio-fallback-spec.md  pr-035-youtube-audio-fallback-impl.md  pr-040-gstack-superpowers-workflow.md  pr-043-7a-auth-scaffold-impl.md
docs/superpowers/plans/: 2026-05-05-drive-upload.md
docs/superpowers/specs/: 2026-05-05-drive-upload-design.md
infra/: .gitignore  README.md  app.py  cdk.json  requirements.txt  seed.py
infra/stacks/: hosted_stack.py
infra/tests/: test_hosted_stack.py
specs/: README.md  REQUIREMENTS_TEMPLATE.md  mission.md  roadmap.md  tech-stack.md
specs/2026-05-02-assemblyai-mvp-slice-1/: plan.md  requirements.md  validation.md
specs/2026-05-04-drive-source-passthrough/: execution-plan.md  plan.md  requirements.md  validation.md
specs/2026-05-12-youtube-captions-source/: plan.md  requirements.md  validation.md
specs/2026-05-13-youtube-audio-fallback/: plan.md  requirements.md  validation.md
specs/2026-05-14-hosted-ui/: plan-7a.md  plan-7e.md  requirements.md
src/transciber/: __init__.py  cli.py  config.py
src/transcriber/: __init__.py  cli.py  config.py  errors.py
src/transcriber/core/: atomic.py  audio.py  auth.py  budget.py  title.py  workspace.py
src/transcriber/destinations/: base.py  drive.py
src/transcriber/formatters/: base.py  markdown.py
src/transcriber/hosted/: __init__.py  errors.py  s3keys.py
src/transcriber/providers/: assemblyai.py  base.py
src/transcriber/sources/: __init__.py  base.py  google_drive.py  local.py  youtube.py
tests/: test_smoke.py
tests/fixtures/golden/: sample.md
tests/manual/: end_to_end.md
tests/unit/: test_assemblyai_provider.py  test_atomic.py  test_audio.py  test_auth.py  test_budget.py  test_cli.py  test_config.py  test_drive_destination.py  test_google_drive.py  test_markdown_formatter.py  test_provider_types.py  test_source_dispatch.py  test_workspace.py  test_youtube_source.py
tests/unit/hosted/: test_delete_transcript.py  test_get_me.py  test_get_transcript.py  test_hosted_errors.py  test_invite_gate.py  test_list_transcripts.py  test_s3keys.py  test_seed_shapes.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.ts  config.ts  hooks.ts  main.tsx  manifest.ts
web/src/__tests__/: api.test.ts  config.test.ts  dashboard.test.tsx  smoke.test.tsx  viewer.test.tsx
web/src/components/: BudgetPill.tsx  Dashboard.tsx  (+1 more)
(+5 files in other folders)
