[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssm-transcriber"
version = "0.1.0"
description = "Multi-agent audio/video transcription pipeline — local-first, cloud-agnostic, cost-optimized"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic-settings>=2.3.0",
    "ffmpeg-python>=0.2.0",
    "assemblyai>=0.30.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "responses>=0.25.0",
]

[project.scripts]
ssm-transcriber = "transcriber.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
