[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssm-transcriber"
version = "0.1.0"
description = "Multi-agent audio/video transcription pipeline — local-first, cloud-agnostic, cost-optimized"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "requests>=2.32.0",
    "tenacity>=8.2.0",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "responses>=0.25.0",
    "types-requests>=2.32.0",
]

[project.scripts]
ssm-transcriber = "transcriber.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

# Vendor SDKs without type stubs. Adding modules here is preferable to
# scattering ``# type: ignore[import-untyped]`` comments at import sites.
[[tool.mypy.overrides]]
module = ["ffmpeg"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httplib2", "httplib2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
